Update dialog styles to prevent scrollbar during animations.

--- a/src/app/components/image-gallery-modal/image-gallery-modal.component.scss
+++ b/src/app/components/image-gallery-modal/image-gallery-modal.component.scss
@@ -2,10 +2,9 @@
 @import "../../../assets/mixins";
 
 .gallery {
-  width: 90%;
-  max-width: 800px;
   background: #ffffff;
-  padding: 40px;
+  padding: 20px;
+  max-height: 80vh;
 
   .gallery__title {
     text-align: center;
