--- a/src/assets/material-theme.scss
+++ b/src/assets/material-theme.scss
@@ -47,6 +47,3 @@ $theme-app-theme: mat-light-theme($theme-app-primary, $theme-app-accent, $theme-
 // Dialog Overrides
 // ********************************************************************
 
-.cdk-overlay-pane {
-  overflow-y: auto;
-}
